# edge-3d-object-tracking

./: CMakeLists.txt  CameraModel.cpp  CameraModel.h  CostFunction.h  Histogram.cpp  Histogram.h  ModelWarpper.cpp  ModelWarpper.h  Parameterization.h  Preprocess.h  Readme.md  Render.cpp  Render.h  Solver.cpp  Solver.h  glm.cpp  main.cpp  types.h
include/: CostFunction.h  Histogram.h  ModelWarpper.h  Parameterization.h  Post.h  Solver.h  Utils.h  glm.h  types.h
src/: ModelWarpper.cpp  Post.cpp  Render.cpp  Solver.cpp  Utils.cpp  _Solver.cpp
